link to go for to the top

--- a/index.html
+++ b/index.html
@@ -77,5 +77,8 @@
       <br>
       <button type="button" name="sendEmailButton">Click to send!</button>
     </div>
+<div>
+<a href="h1">GO TO THE TOP</a>
+</div>
   </body>
 </html>
