got to the top bug fixed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Portofolio</title>
   </head>
   <body>
-    <h1>My personal Portofolio</h1>
+    <h1 id="top">My personal Portofolio</h1>
     <div>
       <p>
         My name is Carlos Palacios. I am from Mexico, currently living in
@@ -77,8 +77,9 @@
       <br>
       <button type="button" name="sendEmailButton">Click to send!</button>
     </div>
+    <hr>
 <div>
-<a href="h1">GO TO THE TOP</a>
+<a href="#top">GO TO THE TOP</a>
 </div>
   </body>
 </html>
