minor css error fix

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <body style="background-color: #c3c388;">
     <h1 id="title">My personal Portofolio</h1>
     <div>
-      <p>
+      <h3>
         My name is Carlos Palacios. I am from Mexico, currently living in
        Guadalajara, Jalisco. I'm a student at Universidad Autonoma de Guadalajara
        (UAG) in my second year (middle of my carrer). I am working for an
        entrepreneur named Andreas West. With him and another coworker we are
        developing a dna genealogy tools webpage. I have learn alot with this
        new job. The technologies that I have been developing are:
-      </p>
+      <h3>
         <ul>
           <li>
             Version Control (Sourcetree) <br>
@@ -41,7 +41,7 @@
     </div>
     <hr>
     <div class="technologies">
-      <h2>Technologies</h2>
+      <h1>Technologies</h1>
       <table class="techTable">
         <tr>
           <td><img src="https://guide.meteor.com/images/logo-coralspace-left.svg"
@@ -55,7 +55,7 @@
     </div>
     <hr>
     <div>
-      <h3>Personal information:</h3>
+      <h1 style="text-align:center;">Personal information:</h1>
       <ul>
         <li>Name: Carlos Palacios Rebollar</li>
         <li>School: UAG</li>
@@ -66,16 +66,17 @@
       </ul>
     </div>
     <hr>
-    <div id="contactInfo">
-      <h3>Contact:</h3>
-      <p>Send E-mail for contact</p>
-      <p>Name: <input type="text" name="name"></p>
-      <p>E-mail: <input type="text" name="email"></p>
-      <textarea rows="10" cols="50">
-      </textarea>
+    <div id="info">
+      <div class="contactInfo">
+        <h3>Contact:</h3>
+        <p>Send E-mail for contact</p>
+        <p>Name: <input type="text" name="name"></p>
+        <p>E-mail: <input type="text" name="email"></p>
+        <textarea rows="10" cols="50">
+        </textarea>
       <br>
-      <button type="button" name="sendEmailButton">Click to send!</button>
+        <button class="sendBtn" type="button" name="sendEmailButton"><b>Click to send!</b></button>
+      </div>
     </div>
-    <hr style="clear:both">
   </body>
 </html>
